--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@lexical/react": "^0.8.1",
+    "cheerio": "^1.0.0-rc.12",
     "lexical": "^0.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
